Got Z.Diagram working

--- a/OzricUI/Pages/_Layout.cshtml
+++ b/OzricUI/Pages/_Layout.cshtml
@@ -12,6 +12,9 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="OzricUI.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+    
+    <link href="_content/Z.Blazor.Diagrams/style.min.css" rel="stylesheet" />
+    <link href="_content/Z.Blazor.Diagrams/default.styles.min.css" rel="stylesheet" />
 </head>
 <body>
     @RenderBody()
@@ -28,5 +31,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/Z.Blazor.Diagrams/script.min.js"></script>
+
 </body>
 </html>
