--- a/OzricUI/_Imports.razor
+++ b/OzricUI/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using OzricUI
 @using OzricUI.Shared
+@using Blazor.Diagrams.Core
+@using Blazor.Diagrams.Core.Geometry
+@using Blazor.Diagrams.Core.Models
