--- a/OzricUI/Pages/Graph.razor
+++ b/OzricUI/Pages/Graph.razor
@@ -4,15 +4,11 @@
 
 @using OzricUI.Data
 @using Blazor.Diagrams.Components
+@using OzricEngine.ext
+@using OzricEngine.logic
 @inject OzricEngineService ozricEngine
 
 <h1>Graph</h1>
-
-<div class="diagram-container">
-    <CascadingValue Value="diagram">
-        <DiagramCanvas></DiagramCanvas>
-    </CascadingValue>
-</div>
     
 @if (graph == null)
 {
@@ -20,24 +16,26 @@
 }
 else
 {
-   <ul>
-    @foreach (var node in graph.nodes)
-    {
-        <li>@node.Value.id</li>
-    }
-    </ul>
-    <pre>
-        @graph.edges.Count edges loaded
-    </pre>
+    <div class="diagram-container">
+        <CascadingValue Value="diagram">
+            <DiagramCanvas></DiagramCanvas>
+        </CascadingValue>
+    </div>
 }
 
 @code {
     private OzricEngine.Graph? graph;
+    private GraphLayout? graphLayout;
+    private Dictionary<string, NodeModel> nodesInDiagram = new();
+    private Dictionary<string, LinkModel> edgesInDiagram = new();
     private Diagram? diagram { get; set; }
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        base.OnInitialized();
+        await base.OnInitializedAsync();
+    
+        graph = await ozricEngine.GetGraphAsync();
+        graphLayout = await ozricEngine.GetGraphLayoutAsync();
         
         var options = new DiagramOptions
         {
@@ -56,32 +54,59 @@ else
         
         diagram = new Diagram(options);
         
-        Setup();
-    }
-
-    protected override async Task OnInitializedAsync()
-    {
-        await base.OnInitializedAsync();
-    
-        graph = await ozricEngine.GetGraphAsync();
+        PopulateDiagram();
     }
         
-    private void Setup()
+    private void PopulateDiagram()
     {
-        var node1 = NewNode(50, 50);
-        var node2 = NewNode(300, 300);
-        var node3 = NewNode(300, 50);
-        diagram.Nodes.Add(new [] { node1, node2, node3 });
-        diagram.Links.Add(new LinkModel(node1.GetPort(PortAlignment.Right), node2.GetPort(PortAlignment.Left)));
+        nodesInDiagram.Clear();
+        edgesInDiagram.Clear();
+
+        int x = 0, y = 0, w = 160, h = 120, cols = 8; 
+        
+        foreach (var node in graph.nodes)
+        {
+            var diagramNode = NewNode(node.Value, graphLayout.nodeLayout.GetOrSet(node.Key, () =>
+            {
+                var point = new Point(x * w, y * h);
+                if (++x == cols)
+                {
+                    x = 0;
+                    ++y;
+                }
+                return point;
+            }));
+            
+            nodesInDiagram[node.Key] = diagramNode;
+            diagram.Nodes.Add(diagramNode);
+        }
+
+        foreach (var edge in graph.edges)
+        {
+            var fromNodeID = edge.Key;
+            var fromOutputs = edge.Value;
+
+            foreach (var fromOutput in fromOutputs.Keys)
+            {
+                foreach (var toInput in fromOutputs[fromOutput])
+                {
+                    var fromD = nodesInDiagram[fromNodeID]; 
+                    var toD = nodesInDiagram[toInput.nodeID];
+                    
+                    diagram.Links.Add(new LinkModel(fromD.GetPort(PortAlignment.Right), toD.GetPort(PortAlignment.Left)));
+                }
+            }
+        }
     }
 
-    private NodeModel NewNode(double x, double y)
+    private NodeModel NewNode(Node node, Point point)
     {
-        var node = new NodeModel(new Point(x, y));
-        node.AddPort(PortAlignment.Bottom);
-        node.AddPort(PortAlignment.Top);
-        node.AddPort(PortAlignment.Left);
-        node.AddPort(PortAlignment.Right);
-        return node;
+        var nodeModel = new NodeModel(point);
+        nodeModel.Title = node.id;
+        nodeModel.AddPort(PortAlignment.Bottom);
+        nodeModel.AddPort(PortAlignment.Top);
+        nodeModel.AddPort(PortAlignment.Left);
+        nodeModel.AddPort(PortAlignment.Right);
+        return nodeModel;
     }
 }
