--- a/OzricUI/Pages/_Layout.cshtml
+++ b/OzricUI/Pages/_Layout.cshtml
@@ -15,6 +15,8 @@
     
     <link href="_content/Z.Blazor.Diagrams/style.min.css" rel="stylesheet" />
     <link href="_content/Z.Blazor.Diagrams/default.styles.min.css" rel="stylesheet" />
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
 </head>
 <body>
     @RenderBody()
