--- a/OzricUI/Pages/_Layout.cshtml
+++ b/OzricUI/Pages/_Layout.cshtml
@@ -17,6 +17,7 @@
     <link href="_content/Z.Blazor.Diagrams/default.styles.min.css" rel="stylesheet" />
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 </head>
 <body>
     @RenderBody()
