Converting over to MudBlazor styling

--- a/OzricUI/Pages/Graph.razor
+++ b/OzricUI/Pages/Graph.razor
@@ -1,6 +1,6 @@
 ﻿@page "/graph"
 
-<PageTitle>Graph</PageTitle>
+<PageTitle>Ozric - Graph</PageTitle>
 
 @using OzricUI.Data
 @using Blazor.Diagrams.Components
